fixed console overflow

--- a/web/style.css
+++ b/web/style.css
@@ -10,6 +10,7 @@ input.prompt {
 				border-width: 0px;
 				color: #fff;
 				font-size: large;
+				width: 80%;
 
 		   }
 
@@ -20,6 +21,9 @@ padding-bottom: 30px;
 background-color: #424242;
 color:#fff;
 height: 100%;
+width: calc(95% - 30px);
+position: absolute;
+overflow-y: scroll;
 
 
 
@@ -61,7 +65,7 @@ height: 100%;
 .console{
 	
 	padding-left: 20px;
-	padding-right: 20px;
+	width: 95%;
 	
 
 }	
